<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout">

        <ImageView
            android:id="@+id/signup_image"
            android:layout_width="425dp"
            android:layout_height="758dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/signup_background" />

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/stateProgressBar"
            android:layout_width="179dp"
            android:layout_height="37dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:spb_currentStateDescriptionColor="@color/colorAccent"
            app:spb_currentStateNumber="one"
            app:spb_descriptionTopSpaceIncrementer="2dp"
            app:spb_maxStateNumber="two"
            app:spb_stateBackgroundColor="@color/colorPrimary"
            app:spb_stateDescriptionColor="#808080"

            app:spb_stateDescriptionSize="20sp"
            app:spb_stateForegroundColor="@color/colorAccent"
            app:spb_stateLineThickness="10dp"
            app:spb_stateNumberBackgroundColor="#808080"
            app:spb_stateNumberForegroundColor="@color/colorPrimary"
            app:spb_stateSize="40dp"
            app:spb_stateTextSize="15sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="167dp"
            android:layout_height="69dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateProgressBar"
            app:srcCompat="@drawable/compact_logo" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="278dp"
            android:layout_height="79dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/wellcome_description"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_image"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="281dp"
            android:layout_height="79dp"
            android:layout_marginTop="12dp"
            android:text="@string/register_intro_text"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_image"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="277dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_description"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_image"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="354dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:text="@string/name_type_description"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_image"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/step_description"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="146dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/stateProgressBar">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/color"
            android:layout_width="279dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="Digite o seu nome"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="341dp"
            android:layout_height="88dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.377"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:checked="true"
                android:text="Aluno"
                android:textColor="@drawable/radiobutton_default_selector"
                android:theme="@style/RadioButtonDefaultStyle" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:checked="false"
                android:text="Professor"
                android:textColor="@drawable/radiobutton_default_selector"
                android:theme="@style/RadioButtonDefaultStyle" />

        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="107dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/next_signup_text"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>